// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecordListCard > should have a snapshot match for its appearance 1`] = `
.c0 {
  position: relative;
  width: 300px;
  min-height: 240px;
  display: grid;
  grid-template-rows: 200px 1fr;
  background-color: var(--primary-color);
  border-radius: 16px;
}

.c0:hover {
  background-color: var(--hovering-color);
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.c2 {
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  padding: 8px 16px;
  justify-content: center;
  align-items: flex-start;
}

.c3 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 600;
}

.c4 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 400;
}

<div
  class="c0"
>
  <img
    alt="kuman514"
    class="c1"
    src="/src/assets/avatar/avatar.jpeg"
  />
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      kuman514
    </span>
    <span
      class="c4"
    >
      2-5 / 12345679점
    </span>
  </div>
</div>
`;

exports[`RecordListCard > should have a snapshot match showing youtube mark and special tags 1`] = `
.c6 {
  padding: 4px 8px;
  justify-content: center;
  align-items: center;
  background-color: var(--gray-color);
  border-radius: 4px;
  font-size: 12px;
  font-weight: 400;
  color: var(--white-color);
}

.c0 {
  position: relative;
  width: 300px;
  min-height: 240px;
  display: grid;
  grid-template-rows: 200px 1fr;
  background-color: var(--primary-color);
  border-radius: 16px;
}

.c0:hover {
  background-color: var(--hovering-color);
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.c2 {
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  padding: 8px 16px;
  justify-content: center;
  align-items: flex-start;
}

.c3 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 600;
}

.c4 {
  color: var(--white-color);
  font-size: 16px;
  font-weight: 400;
}

.c5 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 8px;
}

.c7 {
  position: absolute;
  top: 16px;
  right: 16px;
}

<div
  class="c0"
>
  <img
    alt="kuman514"
    class="c1"
    src="/src/assets/avatar/avatar.jpeg"
  />
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      kuman514
    </span>
    <span
      class="c4"
    >
      2-5 / 12345679점
    </span>
    <div
      class="c5"
    >
      <span
        class="c6"
      >
        yasuo
      </span>
      <span
        class="c6"
      >
        koishi
      </span>
      <span
        class="c6"
      >
        노미스 ALL
      </span>
    </div>
  </div>
  <svg
    class="c7"
    height="33.6"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 28.57 20"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M27.9727 3.12324C27.6435 1.89323 26.6768 0.926623 25.4468 0.597366C23.2197 2.24288e-07 14.285 0 14.285 0C14.285 0 5.35042 2.24288e-07 3.12323 0.597366C1.89323 0.926623 0.926623 1.89323 0.597366 3.12324C2.24288e-07 5.35042 0 10 0 10C0 10 2.24288e-07 14.6496 0.597366 16.8768C0.926623 18.1068 1.89323 19.0734 3.12323 19.4026C5.35042 20 14.285 20 14.285 20C14.285 20 23.2197 20 25.4468 19.4026C26.6768 19.0734 27.6435 18.1068 27.9727 16.8768C28.5701 14.6496 28.5701 10 28.5701 10C28.5701 10 28.5677 5.35042 27.9727 3.12324Z"
        fill="#FF0000"
      />
      <path
        d="M11.4253 14.2854L18.8477 10.0004L11.4253 5.71533V14.2854Z"
        fill="white"
      />
    </g>
  </svg>
</div>
`;
